# Plush-for-ComfyUI

./: .gitattributes  .gitignore  Fix_Google_httpx_Linux.sh  Fix_Google_httpx_Windows.bat  README.md  UtilNodes.py  __init__ .py  __init__.py  api_requests.py  config.json  envvar_template.txt  fetch_models.py  help.json  mng_json.py  models_template.txt  modurl_template.json  optional_models.txt  pyproject.toml  requirements.txt  requirments.txt  style_prompt.py  text_files.py  update.json  urls.json  utils.py
Web/: utils.js
Web/js/: binding.js
bkup/: config.json
user/: text_file_dirs.json
