[tool.poetry]
name = "Plush-for-ComfyUI"
version = "1.22.3"
description = "A suite of nodes that includes:  - Prompt enhancers/generators that employ remote AI services and local front-ends like: ChatGPT, Anthropic Claude, Groq, Gemini, LM Studio, Oobabooga, OpenRouter etc.  - An Image Generator that uses Dall_e 3.  - An image metadata extractor that extracts seed, prompt, cfg, size, denoise, etc from existing AI generated images and photo metadata (from exif data) from jpeg photographs.  A tagger that appends text (tags) to the beginning, end and/or middle of a text block.  Image and text multiplexer utilility.  A text block remover that removes text between two named tags."
authors = ["glibsonoran <glibsonoran@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "1.23.5"
openai = "1.14.0"
pillow = "10.3.0"
torch = "2.0.1"
requests = "2.31.0"
pyexiv2 = "2.12.0"
anthropic = "0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.comfy]
PublisherId = "glibsonoran"
DisplayName = "Plush for ComfyUI"

[project]
name = "Plush-for-ComfyUI"
version = "1.22.3"
description = "A suite of nodes that includes:  - Prompt enhancers/generators that employ remote AI services and local front-ends like: ChatGPT, Anthropic Claude, Groq, Gemini, LM Studio, Oobabooga, OpenRouter etc.  - An Image Generator that uses Dall_e 3.  - An image metadata extractor that extracts seed, prompt, cfg, size, denoise, etc from existing AI generated images and photo metadata (from exif data) from jpeg photographs.  A tagger that appends text (tags) to the beginning, end and/or middle of a text block.  Image and text multiplexer utilility.  A text block remover that removes text between two named tags."
license = {file = "LICENSE"}
dependencies = [
  "numpy",
  "openai==1.14.0",
  "pillow",
  "torch",
  "requests",
  "pyexiv2",
  "anthropic==0.25.1"
]

[project.urls]
Repository = "https://github.com/glibsonoran/Plush-for-ComfyUI"
